[gd_scene load_steps=3 format=3 uid="uid://dhr0gg8gqdduy"]

[ext_resource type="Script" path="res://Editor/Props/LedBoardPropertiesUI.gd" id="1_ed8m2"]
[ext_resource type="Texture2D" uid="uid://bqs7ug2x7dj0x" path="res://BillboardTextures/BigJump.png" id="2_vqyh7"]

[node name="LedBoardPropertiesUI" type="VBoxContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -121.0
offset_right = 121.0
offset_bottom = 400.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 2
mouse_filter = 2
script = ExtResource("1_ed8m2")

[node name="MainContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "LED Board Options"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Width"

[node name="WidthSpinbox" type="SpinBox" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = 4.0
max_value = 2048.0
step = 2.0
value = 80.0
alignment = 1
custom_arrow_step = 4.0
select_all_on_focus = true

[node name="HBoxContainer3" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Height"

[node name="HeightSpinbox" type="SpinBox" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
min_value = 4.0
max_value = 2048.0
step = 2.0
value = 48.0
alignment = 1
custom_arrow_step = 4.0
select_all_on_focus = true

[node name="HBoxContainer4" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Support Beams"

[node name="SupportToggle" type="CheckButton" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="HBoxContainer6" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
text = "Support Bottom"

[node name="SupportBottomHeightSpinbox" type="SpinBox" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
min_value = -1024.0
max_value = 0.0
step = 4.0
value = -16.0
alignment = 1
custom_arrow_step = 4.0
select_all_on_focus = true

[node name="HBoxContainer5" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
text = "Use Custom Texture"

[node name="CustomTextureToggle" type="CheckButton" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2

[node name="LocalTextureContainer" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/LocalTextureContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Texture"

[node name="LocalTextureOptions" type="OptionButton" parent="MainContainer/MarginContainer/VBoxContainer/LocalTextureContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(148, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
item_count = 1
selected = 0
popup/item_0/text = "BigJump"
popup/item_0/icon = ExtResource("2_vqyh7")
popup/item_0/id = 0

[node name="CustomTextureContainer" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/CustomTextureContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Image URL"

[node name="CustomTextureLineEdit" type="LineEdit" parent="MainContainer/MarginContainer/VBoxContainer/CustomTextureContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(148, 0)
layout_mode = 2
placeholder_text = "URL"

[node name="HSeparator" type="HSeparator" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Position"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "X"

[node name="PosXSpinbox" type="SpinBox" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
step = 4.0
allow_greater = true
allow_lesser = true
alignment = 1
custom_arrow_step = 4.0
select_all_on_focus = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Y"

[node name="PosYSpinbox" type="SpinBox" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
step = 4.0
allow_greater = true
allow_lesser = true
alignment = 1
custom_arrow_step = 4.0
select_all_on_focus = true

[node name="HBoxContainer3" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Z"

[node name="PosZSpinbox" type="SpinBox" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
step = 4.0
allow_greater = true
allow_lesser = true
alignment = 1
custom_arrow_step = 4.0
select_all_on_focus = true

[node name="VSeparator" type="VSeparator" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Rotation"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "X"

[node name="RotXSpinbox" type="SpinBox" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
step = 0.087
allow_greater = true
allow_lesser = true
alignment = 1
select_all_on_focus = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "Y"

[node name="RotYSpinbox" type="SpinBox" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
step = 0.087
allow_greater = true
allow_lesser = true
alignment = 1
select_all_on_focus = true

[node name="HBoxContainer3" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "Z"

[node name="RotZSpinbox" type="SpinBox" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
step = 0.087
allow_greater = true
allow_lesser = true
alignment = 1
select_all_on_focus = true

[node name="VisibilityButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
focus_mode = 0
toggle_mode = true
text = "^ LED Board"
